[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://GFX/Players/bunny1_stand.png" type="Texture" id=2]
[ext_resource path="res://GFX/Players/bunny1_ready_fixed.png" type="Texture" id=3]
[ext_resource path="res://GFX/Players/bunny1_walk1.png" type="Texture" id=4]
[ext_resource path="res://GFX/Players/bunny1_walk2.png" type="Texture" id=5]
[ext_resource path="res://GFX/Players/bunny1_hurt.png" type="Texture" id=6]
[ext_resource path="res://GFX/Players/bunny1_jump.png" type="Texture" id=7]
[ext_resource path="res://Scripts/PlayerAnimation.gd" type="Script" id=8]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=9]
[ext_resource path="res://SFX/pain.ogg" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource_name = "hurt_flash"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 14
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
world_limit = 1250

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"
script = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hurt_flash = SubResource( 2 )
blend_times = [  ]

[node name="HurtTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="JumpAudio" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 9 )
volume_db = -15.0
pitch_scale = 1.5
autoplay = false
mix_target = 0
bus = "Master"

[node name="PainAudio" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 10 )
volume_db = -20.0
pitch_scale = 2.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="5"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -0.594574, -52.0501, 27.2311, -43.7261, 42.2142, -29.6944, 53.8676, -9.00351, 59.5755, 10.0226, 60.5268, 39.2752, 52.4407, 59.2526, 51.965, 101.348, -50.7759, 101.11, -51.2516, 59.9661, -60.0511, 41.6535, -58.6242, 9.30911, -52.2029, -11.6196, -41.9763, -29.4566, -26.7555, -42.537 )

[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]


